# ecs-sdl

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  cmake-build-debug.sh  cmake-build-release.sh  make.sh
conf/: assets.conf  entity.conf  game.conf
engine/: CMakeLists.txt  randomizer.h
engine/action/: action.h
engine/assets/: animation.cpp  animation.h  assetsmanager.cpp  assetsmanager.h  sprite.cpp  sprite.h  texture.cpp
engine/component/: component.h  lifecyclecomponent.h  transformcomponent.h
engine/engine/: framerate.cpp  framerate.h  game.h  scene.cpp  scenegame.cpp  scenegame.h
engine/engine/scene/: scene.cpp  scene.h
engine/entity/: entity.h
engine/geometry/: vec2.cpp  vec2.h
engine/renderer/: pixelrenderer.cpp  pixelrenderer.h
engine/scene/: playscene.cpp  playscene.h  scene.cpp  scene.h  scenegame.h
engine/src/: randomizer.cpp  randomizer.h
engine/src/action/: action.cpp  action.h  keyboardactionhandler.cpp  keyboardactionhandler.h  mouseaction.h  mouseactionhandler.cpp  mouseactionhandler.h
engine/src/assets/: animation.cpp  assetsmanager.cpp  assetsmanager.h  sprite.cpp  sprite.h
engine/src/component/: lifecyclecomponent.h  shapecomponent.h
engine/src/engine/: app.cpp  app.h  game.cpp  game.h  scenegame.cpp  scenegame.h
engine/src/entity/: entitymanager.cpp  entitymanager.h
engine/src/geometry/: circle.h  point.cpp  vec2.h
engine/src/random/: random.cpp  random.h
engine/src/renderer/: pixel.cpp  pixel.h  pixelrenderer.cpp  pixelrenderer.h  renderable.h  textrenderer.cpp  textrenderer.h
engine/src/resource/: assets.cpp  assets.h  config.cpp  config.h  logger.cpp  logger.h
engine/src/scene/: menuscene.cpp  menuscene.h  playscene.cpp  playscene.h  scene.cpp  scene.h  scenegame.cpp  scenegame.h
gameofballs/conf/: assets.conf  entity.conf  game.conf
gameofballs/src/: ballgame.cpp  ballgame.h  ballscene.cpp  ballscene.h  entryscene.cpp  entryscene.h  main.cpp
gfx/animation/: doomguy.piskel
spaceships/conf/: game.conf
spaceships/src/: main.cpp  spacescene.cpp  spacescene.h  spaceshipgame.cpp  spaceshipgame.h
src/: app.cpp  ballgame.cpp  ballgame.h  entity.cpp  entity.h  game.cpp  game.h  main.cpp  randomizer.h
src/assets/: animation.cpp  animation.h  assets.cpp  assets.h  assetsmanager.cpp  assetsmanager.h  texture.cpp  texture.h
src/base/: app.cpp  app.h  config.cpp  config.h  game.cpp  game.h  logger.cpp  logger.h
src/component/: collisioncomponent.h  component.h  inputcomponent.h  lifecyclecomponent.h  shapecomponent.h  sprite.h  spritecomponent.h  transformcomponent.h
src/engine/: app.cpp  app.h  framerate.cpp  framerate.h  game.cpp  game.h  scene.h  scenegame.cpp  scenegame.h
src/entity/: entity.h  entitymanager.cpp  entitymanager.h  vec2.cpp  vec2.h
src/gameofballs/: ballgame.cpp  ballgame.h  entityconfig.cpp  entityconfig.h
src/geometry/: circle.cpp  circle.h  point.h  vec2.cpp  vec2.h
src/renderer/: pixel.cpp  pixel.h  pixelrenderer.cpp  pixelrenderer.h
src/resource/: assets.cpp  assets.h  config.cpp  config.h  logger.cpp  logger.h
src/spaceships/: spaceshipgame.cpp  spaceshipgame.h
